# krszme

./: README.md  package.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md  apierror.md  url.md  user.md
next/: .gitignore  .npmrc  next.config.js  package.json  pnpm-lock.yaml
next/components/: SocialButton.tsx  card.tsx  footer.tsx  link.tsx  loader.tsx  nav.tsx  shortenerForm.tsx  themeSwitcher.tsx  toastWithButton.tsx
next/components/HOC/: withAuth.tsx  withTitle.tsx
next/lib/: analytics.ts  api.ts  auth.ts  firebase.ts  theme.ts
next/pages/: 404.tsx  _app.tsx  _document.tsx  _offline.tsx  create.tsx  dashboard.tsx  index.tsx  linknotfound.tsx  login.tsx  profile.tsx  terms.tsx
next/public/: manifest.json  robots.txt
next/styles/: globals.css
next/types/: ApiError.d.ts  url.d.ts
rust-server/: Cargo.toml  Dockerfile
rust-server/src/: apierror.rs  db.rs  jwt.rs  main.rs
server/: .gcloudignore  .gitignore  Cargo.toml  package.json  tsconfig.json
server/src/: api.ts  db.rs  index.ts  jwt.rs  main.rs
server/src/lib/: ApiError.ts  firebase.ts  mongoose.ts  rateLimit.ts  secretManager.ts
