[package]
name = "krszme_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.0.1"
actix-http = "3"
awc = "3"
env_logger = "0.9.0"
jsonwebtoken = "8"
log = "0.4.16"
mongodb = "2.2.0"
serde = "1"
