[package]
name = "krszme_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.0.1"
env_logger = "0.9.0"
jsonwebtoken = "8"
log = "0.4.16"
mongodb = "2.2.0"
serde = "1"
anyhow = "1.0.56"
reqwest = { version = "0.11.10", default-features = false, features = [
    "rustls-tls",
    "json"
] }
nanoid = "0.4.0"
regex = "1.5.5"
lazy_static = "1.4.0"
actix-cors = "0.6.1"
serde_json = "1.0.79"

[profile.release]
strip = true
